2008-06-13  Stipe Tolj  <stolj at kannel.org>
    * gw/smsc/smsc_smpp.c: fix possible assertion check panic while calling
      octstr_get_char() on the source_addr field, which may be NULL according
      to SMPP v3.4 specs.

2008-06-09 Alexander Malysh <amalysh at kannel.org>
    * gw/smsc/smsc_emi.c: fixed name issue when we use alternate host/port.
      Thanks to Vincent CHAVANIS <v.chavanis at telemaque.fr> for spotting this
      and provided patch.

2008-05-31  Stipe Tolj  <stolj at kannel.org>
    * wap/wsp_headers.[ch]: fix encoding of 'Content-Id' WSP header.
      Thanks to Paul Bagyenda from Mbuni for the patch.
      [Msg-Id: <96EDF863-5963-48C4-964D-8A8E375544CC@dsmagic.com>]

2008-04-24  Stipe Tolj  <stolj at kannel.org>
    * gw/bb_store_[file|spool].c: use internal function pointer while
      packing/unpacking the Msg struct.
    * gw/bb_store.[ch]: add store_msg_pack and store_msg_unpack function
      pointers, allowing a box to pass their own msg_[un]pack() functions
      to the storage subsystem, in case they use a different serialization.
    * gw/bearerbox.c, test/test_store_dump.c: add the function pointers
      for packing/unpack to store_init() call.
    * gw/msg.[ch]: we need a wrapper for msg_unpack(), for passing it as
      function pointer argument, since it's a preprocessor macro.

2008-04-21  Stipe Tolj  <stolj at kannel.org>
    * gwlib/socket.[ch]: add host_port() function in accordance to host_ip()
      to get the port number of a TCP connection in use.

2008-04-17  Andreas Fink <andreas at fink.org>
    * gw/smsc/smsc_ois.c: fixed compiler warning.
    
2008-04-16  Andreas Fink <andreas at fink.org>
    * wap/wsp_[strings|unit|init|pdu].c: fixed compiler warnings due to 
      signed/unsigned char mismatch.

2008-04-09  Stipe Tolj  <stolj at kannel.org>
    * Makefile.in: fix 'make clean' target, by fixing find expression.

2008-04-09	Stipe Tolj  <stolj at kannel.org>