@@ -382,6 +382,8 @@ MULTI_GROUP(smsc,
     OCTSTR(status-permfail-regex)
     OCTSTR(status-tempfail-regex)
     OCTSTR(max-sms-octets)
+    OCTSTR(login-prompt)
+    OCTSTR(password-prompt)
 )
 
 
